Figure out the MIME type of shared WebUI resources more efficiently

Previously, GetMimeType() was posted to run on UI thread and potentially
hit disk on Posix systems.

This CL fixes both by adding a hardcoded list (based on `find` scraping)
and requesting GetMimeType() be run from the originating thread (IO)
rather than posting to UI.

R=groby@chromium.org
BUG=608078

Review-Url: https://codereview.chromium.org/1932753006
Cr-Commit-Position: refs/heads/master@{#390843}

Former-commit-id: 8678179613c967ec865b8ee7d1abd9427bd27233